--- a/app/views/videos/download.html.erb
+++ b/app/views/videos/download.html.erb
@@ -4,13 +4,14 @@
 
 <%= bootstrap_row_and_grid do %>
   <%= bootstrap_panel do %>
+    <%= bootstrap_panel_heading do %><%= video_title(@video_info) %><% end %>
     <%= bootstrap_table do %>
       <tbody>
         <tr><td colspan=3><%= @video_info['url_encoded_fmt_stream_map'].collect(&:keys).flatten.uniq %></td></tr>
         <% @video_info['url_encoded_fmt_stream_map'].each do |hash| %>
           <tr>
             <td><%= link_to 'dl', hash['url'] %> <%= '3D' if hash.keys.include?('stereo3d') %></td>
-            <td><%= hash['quality'] %> (<%= hash['type'] %>)</td>
+            <td><%= hash['quality'] %> (<%= video_type(hash) %>)</td>
             <td><%= hash['url'].first(75) + '...' %></td>
           </tr>
         <% end %>        
