--- a/app/views/videos/_form.html.erb
+++ b/app/views/videos/_form.html.erb
@@ -1,6 +1,6 @@
-<%= bootstrap_row_and_grid do %>
+<%= bb_row_and_grid do %>
   <%= simple_form_for :video, url: download_videos_path do |f| %>
-    <%= f.input :url, label: false, placeholder: 'https://www.youtube.com/watch?v=nareTnpxvTQ', wrapper_html: {class: "form-group"}, input_html: {class: 'form-control form-control-large'} %>
-    <%= save_button 'Get Info' %>
+    <%= f.input :url, label: 'Youtube URL', required: false, placeholder: 'https://www.youtube.com/watch?v=nareTnpxvTQ', wrapper_html: {class: "form-group"}, input_html: {class: 'form-control form-control-large', value: defined?(query) ? query : ""} %>
+    <%= bb_button 'Get Info', search_icon %>
   <% end %>
 <% end %>
