--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,10 +8,8 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require navbar-fixed-top
- *= require bootstrap
- *= require bootstrap/_theme
+ *= require bootstrap_builder
  *= require jquery.ui.all
  *= require jquery.ui.datepicker
- *= require custom-bootstrap
+ *= require footer
  */
