--- a/app/views/videos/download.html.erb
+++ b/app/views/videos/download.html.erb
@@ -1,18 +1,16 @@
-<%= render 'form' %>
+<%= render 'form', query: @info.query %>
 
 <br />
 
-<%= bootstrap_row_and_grid do %>
-  <%= bootstrap_panel do %>
-    <%= bootstrap_panel_heading do %><%= video_title(@video_info) %><% end %>
-    <%= bootstrap_table do %>
+<%= bb_row_and_grid do %>
+  <%= bb_panel do %>
+    <%= bb_panel_heading do %><%= @info.title %><% end %>
+    <%= bb_table do %>
       <tbody>
-        <tr><td colspan=3><%= @video_info['url_encoded_fmt_stream_map'].collect(&:keys).flatten.uniq %></td></tr>
-        <% @video_info['url_encoded_fmt_stream_map'].each do |hash| %>
+        <% @info.videos.each do |video| %>
           <tr>
-            <td><%= link_to 'dl', hash['url'] %> <%= '3D' if hash.keys.include?('stereo3d') %></td>
-            <td><%= hash['quality'] %> (<%= video_type(hash) %>)</td>
-            <td><%= hash['url'].first(75) + '...' %></td>
+            <td><%= link_to download_alt_icon + " Download #{video.quality} (#{video.video_type})", video.url %> <%= '3D' if video.is_3d %></td>
+            <td><%= video.url.first(75) + '...' %></td>
           </tr>
         <% end %>        
       </tbody>
